Added preference whether to unload pinned tabs
Also added info about pinned tabs in popup

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>One-Click Tabs Unloader Tab Info Popup</title>
+    <title>One-Click Tabs Unloader Stats Popup</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="popup.css" />
 	<script src="/shared.js"></script>
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-    <div class="header">Tab Information</div>
+    <div class="header">- Tab Stats -</div>
 	<div id="line1" class="info"></div>
 	<div id="line2" class="info"></div>
+	<div id="line3" class="info"></div>
 </body>
 
 </html>
